# farmer-code

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: claude.md
.claude/commands/: speckit.implement.md
.github/workflows/: ci.yml  middleware-echo.yml  release-please.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
architecture/: index.html
architecture/agent-hub/: index.html
architecture/data-flow/: index.html
architecture/module-interactions/: index.html
architecture/orchestration-flow/: index.html
architecture/services/: index.html
architecture/system-overview/: index.html
config/: routing.yaml
configuration/environment-variables/: index.html
docs/: README.md  index.md
docs/api/: README.md  agent-hub.md  orchestrator.md
docs/architecture/: README.md  agent-hub.md  module-interactions.md  orchestration-flow.md  services.md  system-overview.md
docs/configuration/: README.md  environment-variables.md
docs/getting-started/: README.md  development-workflow.md  quickstart.md
docs/guides/: adding-an-agent.md  running-locally.md
docs/modules/: README.md  agent-hub.md  github-integration.md  knowledge-router.md  orchestrator.md  worktree-manager.md
docs/rd/: a2a-protocol-proposal.md  agent-delegation-proposals.md  agents-proposal.md  fc-proposal.md  r-and-d-architecture.md  simplified-workflow-draft.md
docs/reference/: configuration.md  environment.md
docs/services/: README.md  agent-hub.md  orchestrator.md
docs/testing/: README.md  running-tests.md  writing-tests.md
docs/user-journeys/: AH-001-route-question.md  AH-002-session-management.md  AH-003-confidence-escalation.md  AH-004-pending-escalation.md  AH-005-audit-logging.md  BRN-001-create-specification.md  BRN-002-generate-plan.md  BRN-003-generate-tasks.md  JOURNEYS.md  KR-001-route-question.md  KR-002-validate-confidence.md  KR-003-escalate-human.md  KR-004-log-qa.md  ORC-001-create-issue.md  ORC-002-agent-feedback.md  ORC-003-workflow-progression.md  ORC-004-link-pull-request.md  ORC-005-full-sdlc-workflow.md  README.md  SVC-001-orchestrator-workflow.md  SVC-002-agent-consultation.md  SVC-003-human-escalation.md  SVC-004-multi-turn-session.md  SVC-005-stateless-agent.md  SVC-006-local-dev-setup.md  SVC-007-audit-log-query.md  WT-001-create-worktree.md  WT-002-init-plans.md  WT-003-commit-push.md  WT-004-cleanup-worktree.md
getting-started/: index.html
getting-started/development/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/adding-an-agent/: index.html
guides/running-locally/: index.html
guides/testing/: index.html
logs/: audit.jsonl
modules/github-integration/: index.html
modules/worktree-manager/: index.html
reference/: index.html
reference/api-contracts/: index.html
reference/configuration/: index.html
reference/environment/: index.html
references/: feature-breakdown.md  logo-generation.md  overall-specs.md
scripts/: test-all.sh
search/: search_index.json
services/: index.html
services/agent-hub/: Dockerfile  README.md  index.html  pyproject.toml
services/agents/: index.html
services/orchestrator/: Dockerfile  README.md  index.html  pyproject.toml
services/orchestrator/src/: __init__.py  main.py
services/orchestrator/src/api/: __init__.py  health.py  workflows.py
services/orchestrator/src/clients/: __init__.py  agent_hub.py
services/orchestrator/src/core/: __init__.py  phase_executor.py  state_machine.py
services/orchestrator/src/db/: __init__.py  models.py  session.py
services/orchestrator/tests/: __init__.py  conftest.py
services/orchestrator/tests/contract/: __init__.py  test_advance.py  test_get_workflow.py  test_workflows.py
services/orchestrator/tests/integration/: __init__.py  test_state_machine.py
services/orchestrator/tests/unit/: __init__.py
services/shared/: pyproject.toml
services/shared/src/contracts/: __init__.py  config.py
services/shared/src/contracts/clients/: __init__.py  agent.py  agent_hub.py  orchestrator.py
services/shared/src/contracts/models/: __init__.py  agent.py  escalation.py  session.py  workflow.py
services/shared/src/github_integration/: README.md  auth.py  client.py  models.py  service.py
services/shared/src/worktree_manager/: README.md  git_client.py  logger.py  service.py
services/shared/tests/contract/: conftest.py  test_issue_updates.py
services/shared/tests/e2e/: conftest.py  test_github_operations.py
services/shared/tests/integration/: test_worktree_integration.py
services/shared/tests/unit/github_integration/: test_auth.py  test_error_handling.py  test_retry_logic.py
services/shared/tests/unit/worktree_manager/: test_git_client.py  test_worktree_errors.py  test_worktree_models.py  test_worktree_service.py
specs/001-github-integration-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-git-worktree-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-knowledge-router/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-agent-hub-refactor/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-baron-pm-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-farmer-code-rebrand/: plan.md  research.md  spec.md  tasks.md
specs/008-services-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/agent_hub/: README.md  __init__.py  config.py  escalation.py  exceptions.py  hub.py  logger.py  mcp_server.py  models.py  prompts.py  router.py  session.py  validator.py
src/github_integration/: README.md  __init__.py  auth.py  client.py  errors.py  logger.py  models.py  service.py
src/knowledge_router/: README.md  config.py  (+6 more)
tests/: __init__.py  conftest.py
user-journeys/: index.html
(+244 files in other folders)
