[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-integration"
version = "0.1.0"
description = "GitHub Integration Core for FarmCode AI agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyjwt[crypto]>=2.8.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
    "jsonschema>=4.20.0",
    "types-pyyaml>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/github_integration",
    "--cov=src/worktree_manager",
    "--cov=src/orchestrator",
    "--cov=src/knowledge_router",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "contract: Contract tests (public API interface with real auth)",
    "integration: Integration tests (mocked external dependencies)",
    "e2e: End-to-end tests (real GitHub API calls, slow)",
    "unit: Unit tests (isolated components)",
    "journey: Mark test as covering specific user journey (e.g., journey('ORC-001'))",
]

[tool.coverage.run]
source = ["src/github_integration", "src/worktree_manager", "src/orchestrator", "src/knowledge_router"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
