# Root pyproject.toml for Farmer Code monorepo
# This provides shared tooling configuration. Each service has its own pyproject.toml.

[project]
name = "farmer-code-workspace"
version = "0.1.0"
description = "AI-powered SDLC automation platform - workspace root"
requires-python = ">=3.11"
dependencies = [
    # Development dependencies for running tests across all services
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "pyjwt[crypto]>=2.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "types-requests>=2.31.0",
    # Local packages (editable installs)
    "farmer-code-contracts",
]

[tool.uv.sources]
farmer-code-contracts = { path = "services/shared", editable = true }

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Depends() in FastAPI function args is standard pattern
]

[tool.ruff.lint.per-file-ignores]
"services/**/tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "services.*.tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
# Note: Run tests per-service to avoid conftest collisions in monorepo
# Use: uv run pytest services/shared/tests services/orchestrator/tests -v
# Or run all via: ./scripts/test-all.sh
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--import-mode=importlib"]
asyncio_mode = "auto"
markers = [
    "contract: Contract tests (public API interface)",
    "integration: Integration tests (mocked external dependencies)",
    "e2e: End-to-end tests (real services, slow)",
    "unit: Unit tests (isolated components)",
]

[tool.coverage.run]
source = ["services"]
omit = ["services/**/tests/*"]
